[package]
name = "passring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.1", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
nazgul = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha3 = "0.10.8"
