[package]
name = "passring"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.1"
curve25519-dalek = { version = "4.1.2", features = ["rand_core", "digest"] }
hex = { version = "0.4.3", features = ["serde"] }
nazgul = { version = "1.0.0", features = ["no_std"], default-features = false }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sha3 = "0.10.8"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
