[package]
name = "passring"
version = "0.1.5"
authors = ["Stanislav Zhevachevskyi <ih3xcode@protonmail.com>"]
edition = "2021"
description = "Secret remote electronic voting based on ring signatures"
documentation = "https://docs.rs/passring"
readme = "README.md"
homepage = "https://docs.nau-gitiral/passring/"
repository = "https://github.com/passring/passring"
license = "AGPL-3.0-only"

[features]
serde = []

[dependencies]
chacha20poly1305 = "0.10.1"
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest"] }
hex = { version = "0.4.3", features = ["serde"]}
nazgul = { version = "1.0.0", features = ["no_std"], default-features = false }
rand_core = "0.6.4"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = { version = "1.0.128"}
sha3 = "0.10.8"
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["serde", "v4"] }